--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "date-time-selector",
   "version": "0.0.1",
-  "main": "src/index.js",
+  "main": "dist/index.js",
   "description": "React / Bootstrap 4 Date Time Selector",
   "repository": "https://github.com/unifymonitor/date-time-selector.git",
   "author": "unifymonitor",
