--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
   },
   "dependencies": {
     "moment": "^2.19.1",
-    "prop-types": "15.5.8"
+    "prop-types": "15.5.8",
+    "date-time-parser": "git+ssh://git@github.com:unifymonitor/date-time-parser.git"
   },
   "peerDependencies": {
     "react": "^15.5.4"
