--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "moment": "^2.19.1",
     "prop-types": "15.5.8",
     "react": "^16.1.1",
-    "react-dom": "^16.1.1"
+    "react-dom": "^16.1.1",
+    "react-transition-group": "^2.2.1",
+    "reactstrap": "next"
   },
   "devDependencies": {
     "babel-cli": "6.16.0",
