--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "clean": "rm -rf node_modules"
   },
   "dependencies": {
-    "date-time-parser": "^1.0.1",
+    "date-time-parser": "1.0.3",
     "moment": "^2.19.1",
     "prop-types": "15.5.8",
     "react": "^16.1.1",
